--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "semi": false,
     "tabWidth": 4,
     "arrowParens": "avoid",
-    "printWidth": 100
+    "printWidth": 100,
+    "singleQuote": false
 }
