--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/webpack-dev-server": "^3.11.2",
     "copy-webpack-plugin": "^8.1.0",
     "html-webpack-plugin": "^5.3.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
@@ -21,5 +23,11 @@
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "css-loader": "^5.2.0",
+    "lit-html": "^1.3.0",
+    "style-loader": "^2.0.0"
   }
 }
