--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "comlink": "^4.3.0",
     "css-loader": "^5.2.0",
     "lit-html": "^1.3.0",
     "style-loader": "^2.0.0"
