--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@types/emscripten": "^1.39.4",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.2",
+    "autoprefixer": "^10.2.5",
     "copy-webpack-plugin": "^8.1.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.18",
@@ -25,6 +29,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@material/button": "^10.0.0",
+    "@material/ripple": "^10.0.0",
+    "@material/select": "^10.0.0",
+    "@material/textfield": "^10.0.0",
     "classnames": "^2.2.6",
     "comlink": "^4.3.0",
     "css-loader": "^5.2.0",
