--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,6 +72,7 @@
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
-    "src/worker.ts"
+    "src/worker.ts",
+    "src/sw.ts"
   ]
 }
