--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
     "$schema": "https://json.schemastore.org/web-manifest",
     "name": "Prolog Web Checkers",
+    "short_name": "Checkers",
     "theme_color": "#ebebeb",
-    "background_color": "#fffff",
+    "background_color": "#ffffff",
     "start_url": "/",
     "display": "standalone",
     "icons": [
