--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development TS_NODE_PROJECT=webpack.tsconfig.json webpack serve --port 5000",
-    "build": "NODE_ENV=production TS_NODE_PROJECT=webpack.tsconfig.json webpack"
+    "build": "NODE_ENV=production TS_NODE_PROJECT=webpack.tsconfig.json webpack -c webpack.config.prod.ts"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/emscripten": "^1.39.4",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.3",
+    "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.2",
     "autoprefixer": "^10.2.5",
@@ -17,9 +19,12 @@
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.2.9",
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
