--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@material/button": "^10.0.0",
     "@material/ripple": "^10.0.0",
     "@material/select": "^10.0.0",
+    "@material/snackbar": "^10.0.0",
     "@material/textfield": "^10.0.0",
     "classnames": "^2.2.6",
     "comlink": "^4.3.0",
