--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,15 +10,28 @@
         {
             "src": "icon@1x.png",
             "sizes": "128x128",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
+        }, {
+            "src": "icon@1.5x.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
         }, {
             "src": "icon@2x.png",
             "sizes": "256x256",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
+        }, {
+            "src": "icon@3x.png",
+            "sizes": "384x384",
+            "type": "image/png",
+            "purpose": "any maskable"
         }, {
             "src": "icon@4x.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
