--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development TS_NODE_PROJECT=webpack.tsconfig.json webpack serve --port 5000",
-    "build": "NODE_ENV=production TS_NODE_PROJECT=webpack.tsconfig.json webpack -c webpack.config.prod.ts"
+    "dev": "NODE_ENV=development TS_NODE_PROJECT=.webpack/webpack.tsconfig.json webpack serve -c .webpack/webpack.config.dev.ts --port 5000",
+    "build": "NODE_ENV=production TS_NODE_PROJECT=.webpack/webpack.tsconfig.json webpack -c .webpack/webpack.config.prod.ts"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.0",
@@ -43,6 +43,7 @@
     "comlink": "^4.3.0",
     "css-loader": "^5.2.0",
     "lit-html": "^1.3.0",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "webpack-merge": "^5.7.3"
   }
 }
