--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "classnames": "^2.2.6",
     "comlink": "^4.3.0",
     "css-loader": "^5.2.0",
+    "lit": "^2.0.0-rc.1",
     "lit-html": "^1.3.0",
     "style-loader": "^2.0.0",
     "webpack-merge": "^5.7.3"
