--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "dependencies": {
     "@material/button": "^10.0.0",
+    "@material/mwc-button": "^0.21.0",
+    "@material/mwc-select": "^0.21.0",
+    "@material/mwc-textfield": "^0.21.0",
     "@material/ripple": "^10.0.0",
     "@material/select": "^10.0.0",
     "@material/snackbar": "^10.0.0",
@@ -42,7 +45,7 @@
     "classnames": "^2.2.6",
     "comlink": "^4.3.0",
     "css-loader": "^5.2.0",
-    "lit": "^2.0.0-rc.1",
+    "lit-element": "^2.5.0",
     "lit-html": "^1.3.0",
     "style-loader": "^2.0.0",
     "webpack-merge": "^5.7.3"
