--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.2",
-    "autoprefixer": "^10.2.5",
     "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^5.2.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
@@ -24,6 +24,7 @@
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
@@ -31,23 +32,16 @@
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@material/button": "^10.0.0",
     "@material/mwc-button": "^0.21.0",
     "@material/mwc-select": "^0.21.0",
+    "@material/mwc-snackbar": "^0.21.0",
     "@material/mwc-textfield": "^0.21.0",
-    "@material/ripple": "^10.0.0",
-    "@material/select": "^10.0.0",
-    "@material/snackbar": "^10.0.0",
-    "@material/textfield": "^10.0.0",
-    "classnames": "^2.2.6",
     "comlink": "^4.3.0",
-    "css-loader": "^5.2.0",
     "lit-element": "^2.5.0",
-    "lit-html": "^1.3.0",
-    "style-loader": "^2.0.0",
-    "webpack-merge": "^5.7.3"
+    "lit-html": "^1.3.0"
   }
 }
