--- a/src/rs/checkers/Cargo.toml
+++ b/src/rs/checkers/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "checkers-rs"
+name = "checkers-rs-bin"
 version = "0.1.0"
 authors = ["Yaroslav <q.link0.p@gmail.com>"]
 edition = "2018"
+
+[features]
+default = ["js"]
+js = ["wasm", "js-sys"]
+wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -10,10 +15,11 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasm-bindgen = "0.2.69"
+wasm-bindgen = { version = "0.2.69", optional = true }
 console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
+serde-wasm-bindgen = { version = "0.1.3", optional = true }
+js-sys = { version = "0.3.50", optional = true }
+
 serde = { version = "1.0.125", features = ["derive"] }
-serde-wasm-bindgen = "0.1.3"
-js-sys = "0.3.50"
 num_enum = "0.5.1"
