--- a/src/rs/checkers/checkers-js/Cargo.toml
+++ b/src/rs/checkers/checkers-js/Cargo.toml
@@ -4,6 +4,13 @@ version = "0.1.0"
 authors = ["Yaroslav <q.link0.p@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+checkers-rs = { path = "../checkers-rs" }
+wasm-bindgen = { version = "0.2.69" }
+console_error_panic_hook = { version = "0.1.6", optional = true }
+wee_alloc = { version = "0.4.5", optional = true }
+serde-wasm-bindgen = { version = "0.1.3" }
+js-sys = { version = "0.3.50" }
