--- a/src/rs/checkers/checkers-rs/Cargo.toml
+++ b/src/rs/checkers/checkers-rs/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Yaroslav <q.link0.p@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+serde = { version = "1.0.125", features = ["derive"] }
+num_enum = "0.5.1"
