Integrated rust game logic. Disposed of unused workers

--- a/worker.tsconfig.json
+++ b/worker.tsconfig.json
@@ -9,6 +9,7 @@
     },
     "files": [
         "src/swipl/worker.ts",
-        "src/js/worker.ts"
+        "src/js/worker.ts",
+        "src/rs/worker.ts"
     ]
 }
