--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "string-replace-loader": "^3.0.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
