--- a/src/rs/checkers/checkers-js/Cargo.toml
+++ b/src/rs/checkers/checkers-js/Cargo.toml
@@ -14,3 +14,4 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 serde-wasm-bindgen = { version = "0.1.3" }
 js-sys = { version = "0.3.50" }
+serde = { version = "1.0.125", features = ["derive"] }
