--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "NODE_ENV=development TS_NODE_PROJECT=.webpack/webpack.tsconfig.json webpack serve -c .webpack/webpack.config.dev.ts --port 5000",
     "build": "NODE_ENV=production TS_NODE_PROJECT=.webpack/webpack.tsconfig.json webpack -c .webpack/webpack.config.prod.ts",
     "build:dev": "NODE_ENV=development TS_NODE_PROJECT=.webpack/webpack.tsconfig.json webpack -c .webpack/webpack.config.dev.ts",
-    "build:rs": "cd src/rs/checkers; wasm-pack build checkers-js --target web -d ../pkg --out-name checkers-rs"
+    "build:rs": "cd src/rs/checkers; wasm-pack build checkers-js --target web -d ../pkg --out-name checkers-rs",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.0",
@@ -20,6 +21,7 @@
     "css-loader": "^5.2.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.9",
